# Industry_agent_y

./: .gitignore  AGENT.md  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  TASK.md  TODO.md  USE.md  pyproject.toml  requirements.txt
Knowledge_base/: VR头显手册.txt  人体工学椅手册.txt  健身单车手册.txt  健身追踪器手册.txt  儿童电动摩托车手册.txt  冰箱手册.txt  功能键盘手册.txt  发电机手册.txt  可编程温控器手册.txt  吹风机手册.txt  摩托艇手册.txt  水泵手册.txt  汇总英文手册.txt  洗碗机手册.txt  烤箱手册.txt  电钻手册.txt  相机手册.txt  空气净化器手册.txt  空调手册.txt  蒸汽清洁机手册.txt  蓝牙激光鼠标手册.txt
docs/: CHANGELOG.md
scripts/: analyze_image_gap.py  analyze_orphan_images.py  analyze_submission_quality.py  build_image_chunks.py  build_kb.py  check_camera.py  check_product_names.py  describe_all_images.py  embed_image_chunks.py  embed_image_descriptions.py  evaluate_chat.py  fix_image_product_names.py  generate_en_only.py  generate_submission.py  observe_chat_quality.py  parse_debug_results.py  parse_response.py  rebuild_vectors_dashscope.py  reprocess_submission.py  run_regression_suite.py  sample_kb_chunks.py  test_image_descriptions.py  test_image_retrieval.py  verify_image_chunks.py  verify_img_ids.py
submission/: question_public.csv  submission_example.csv  submission_generated.csv  submission_generated_debug.jsonl  submission_reprocessed.csv
tests/: test_agent_flow.py  test_backend_integration.py  test_kb_cleaning.py  test_kb_quality_tools.py  test_prompt_and_retrieval_config.py  test_quality_observation.py  test_regression_suite.py  test_retriever.py  test_runtime_checks.py  test_submission_generation.py  test_submission_quality_analysis.py
(+57 files in other folders)
